Added things to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ bigarray.csv
 testing.csv
 mycsv.csv
 flex-csv-parser/csv-parser.c
+token_lengths.txt
+mean.c
+mean
+models.txt
+os-versions.txt
+sum
